--- a/form.css
+++ b/form.css
@@ -1,96 +1,81 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
-/*font-family: 'Poppins', sans-serif;*/
-
-body {
-    background-color: #1d3557;
+body{
+  margin: 0%;
+  padding: 0%;
 }
-
-div#header {
-    margin: 20px auto 10px auto;
-    width: 45%;
-    background-color: #f1faee;
-    padding: 24px;
-    border-top: 12px solid #457b9d;
-    border-radius: 12px;
+section{
+  margin: 0px;
+  padding: 0px;
+  border: 1em solid black;
+  background-image: linear-gradient(270deg, #e2fdff, #788bff);
 }
-
-div.input {
-    margin: 10px auto 10px auto;
-    width: 45%;
-    background-color: #f1faee;
-    padding: 24px;
-    border-radius: 12px;
-}
-
-.require {
-    color: red;
-}
-
-input[type="text"] {
-    border: none;
-    border-bottom: 1.5px solid #457b9d;
-    min-width: 72%;
-    background-color: transparent;
-}
-
-input[type="text"]:focus {
-    outline: none;;
-}
-
-#fname
-#mi
-#lname {
-    min-width: 35.5%;
-}
-
-button {
-    padding: 10px;
-    background-color: #29b6f6;
-    border: none;
-    display: block;
-    margin: 20px auto;
-    width: 30%;
-    border-radius: 10px;
-}
-
-p#result {
-    background-color: #f1faee;
-    width: 45%;
-    margin: 50px auto auto auto;
-    border-top: 12px solid #457b9d;
-    border-radius: 12px;
-    display: none;
-    padding: 24px;
-    font-size: 20px;
-    line-height: 1.75em;
-}
-
-textarea {
-  width: 95%;
-  height: 100px;
-  resize: vertical;
-}
-
-.value {
-  color: blue;
+.a{
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: bold;
-  border-bottom: 1px solid blue;
-  position: relative;
-  left: 5px;
 }
 
-span#counter {
-  font-size: 12px;
-  position: relative;
-  float: right;
-  margin-right: 5px;
+.a h1{
+  background-color: rgb(72, 73, 72);
+  color: white;
+  padding: 10px;
+  margin: 5px;
 }
 
-#smalltext {
-  font-size: 12px;
-  margin-top: 0;
+
+.content-box form{
+  margin: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#comment {
-  margin-bottom: 0;
+form label{
+  margin: 15px;
+  padding: 8px;
+  font-size: large;
+  font-weight: bold;
+}
+
+form input{
+  margin: 10px;
+  padding: 5px;
+  border: 4px solid rgb(250, 216, 21);
+  border-radius: 15px;
+  height: 30px;
+  width:250px
+}
+
+form select{
+  height: 30px;
+  border-radius: 15px;
+  border: 5px solid rgb(250, 216, 21) ;
+  width: 150px;
+}
+
+form button{
+  margin: 15px;
+  padding: 5px;
+  width: 100px;
+  font-weight: bold;
+  height: 40px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: yellow;
+  border-radius: 15px;
+  border-bottom: 3px solid orange;
+  border-right: 3px solid orange;
+}
+
+form button:hover{
+  color: white;
+}
+
+form textarea{
+  border: 5px solid rgb(250, 216, 21) ;
+  background-color: rgba(184, 135, 11, 0.479);
+  padding: 10px;
+  font-size: medium;
+  font-weight: 600;
 }
