--- a/form.css
+++ b/form.css
@@ -1,26 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
+
 body{
   margin: 0%;
   padding: 0%;
 }
+
 section{
-  margin: 0px;
-  padding: 0px;
-  border: 1em solid black;
-  background-image: linear-gradient(270deg, #e2fdff, #788bff);
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(270deg, #f7ebec, #ac9fbb);
 }
+
 .a{
   text-align: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Poppins', sans-serif;
   font-weight: bold;
+  font-size: 30px;
 }
 
 .a h1{
-  background-color: rgb(72, 73, 72);
-  color: white;
+  color: #1D1E2C;
   padding: 10px;
   margin: 5px;
 }
 
+input[type="text"]{
+  font-size: 20px;
+  font-family: 'Poppins', sans-serif;
+}
+
+#reason {
+  font-size: 15px;
+  font-family: 'Poppins', sans-serif;
+}
 
 .content-box form{
   margin: 20px;
@@ -29,7 +45,7 @@ section{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
 form label{
@@ -42,7 +58,7 @@ form label{
 form input{
   margin: 10px;
   padding: 5px;
-  border: 4px solid rgb(250, 216, 21);
+  border: 4px solid #59656f;
   border-radius: 15px;
   height: 30px;
   width:250px
@@ -51,7 +67,7 @@ form input{
 form select{
   height: 30px;
   border-radius: 15px;
-  border: 5px solid rgb(250, 216, 21) ;
+  border: 5px solid #59656f ;
   width: 150px;
 }
 
@@ -61,20 +77,22 @@ form button{
   width: 100px;
   font-weight: bold;
   height: 40px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: yellow;
+  font-family: 'Poppins', sans-serif;
+  background-color: #ddbdd5;
   border-radius: 15px;
-  border-bottom: 3px solid orange;
-  border-right: 3px solid orange;
+  border-bottom: 3px solid #1d1e2c;
+  border-right: 3px solid #1d1e2c;
 }
 
 form button:hover{
   color: white;
+  cursor: pointer;
 }
 
 form textarea{
-  border: 5px solid rgb(250, 216, 21) ;
-  background-color: rgba(184, 135, 11, 0.479);
+  border-radius: 15px;
+  border: 4px solid #59656f ;
+  background-color: white;
   padding: 10px;
   font-size: medium;
   font-weight: 600;
